--- a/pkcloud-blog.cabal
+++ b/pkcloud-blog.cabal
@@ -25,7 +25,7 @@ library
   build-depends:       base >= 4.7 && < 5
                      , pkcloud-core
   default-language:    Haskell2010
-  default-extensions:          RankNTypes, FlexibleContexts, TemplateHaskell, QuasiQuotes, TypeFamilies, OverloadedStrings
+  default-extensions:  RankNTypes, FlexibleContexts, TemplateHaskell, QuasiQuotes, TypeFamilies, OverloadedStrings, FlexibleInstances, MultiParamTypeClasses
   ghc-options:         -Werror -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-name-shadowing
 
 -- executable new-template-exe
