--- a/pkcloud-blog.cabal
+++ b/pkcloud-blog.cabal
@@ -23,9 +23,11 @@ library
                        PKCloud.Blog.Handler.Root
                        PKCloud.Blog.Handler.Posts
   build-depends:       base >= 4.7 && < 5
+                     , esqueleto
+                     , persistent
                      , pkcloud-core
   default-language:    Haskell2010
-  default-extensions:  RankNTypes, FlexibleContexts, TemplateHaskell, QuasiQuotes, TypeFamilies, OverloadedStrings, FlexibleInstances, MultiParamTypeClasses
+  default-extensions:  RankNTypes, FlexibleContexts, TemplateHaskell, QuasiQuotes, TypeFamilies, OverloadedStrings, FlexibleInstances, MultiParamTypeClasses, ScopedTypeVariables
   ghc-options:         -Werror -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-name-shadowing
 
 -- executable new-template-exe
