--- a/pkcloud-blog.cabal
+++ b/pkcloud-blog.cabal
@@ -28,6 +28,7 @@ library
                      , esqueleto
                      , persistent
                      , pkcloud-core
+                     , shakespeare
   default-language:    Haskell2010
   default-extensions:  RankNTypes, FlexibleContexts, TemplateHaskell, QuasiQuotes, TypeFamilies, OverloadedStrings, FlexibleInstances, MultiParamTypeClasses, ScopedTypeVariables, FunctionalDependencies, ViewPatterns, ImpredicativeTypes
   ghc-options:         -Werror -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-name-shadowing
