--- a/pkcloud-blog.cabal
+++ b/pkcloud-blog.cabal
@@ -4,7 +4,7 @@ synopsis:            Initial project template from stack
 description:         Please see README.md
 homepage:            http://github.com/name/project
 -- license:             BSD3
--- license-file:        LICENSE
+license-file:        LICENSE
 author:              James Parker
 maintainer:          jp@pkauth.com
 -- copyright:           
