--- a/pkcloud-blog.cabal
+++ b/pkcloud-blog.cabal
@@ -29,10 +29,12 @@ library
   build-depends:       base >= 4.7 && < 5
                      , blaze-markup
                      , esqueleto
+                     , markdown
                      , persistent
                      , pkcloud-core
                      , shakespeare
                      , text
+                     , time
   default-language:    Haskell2010
   default-extensions:  RankNTypes, FlexibleContexts, TemplateHaskell, QuasiQuotes, TypeFamilies, OverloadedStrings, FlexibleInstances, MultiParamTypeClasses, ScopedTypeVariables, FunctionalDependencies, ViewPatterns, ImpredicativeTypes
   ghc-options:         -Werror -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-name-shadowing
