Displaying blog post page

--- a/pkcloud-blog.cabal
+++ b/pkcloud-blog.cabal
@@ -20,6 +20,7 @@ library
                        Import
                        PKCloud.Blog.Core
                        PKCloud.Blog.Routes
+                       PKCloud.Blog.Handler.Author
                        PKCloud.Blog.Handler.Edit
                        PKCloud.Blog.Handler.Edits
                        PKCloud.Blog.Handler.New
