--- a/pkcloud-blog.cabal
+++ b/pkcloud-blog.cabal
@@ -26,7 +26,9 @@ library
                        PKCloud.Blog.Handler.Post
                        PKCloud.Blog.Handler.Posts
                        PKCloud.Blog.Handler.Root
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       
+                       aeson
+                     , base >= 4.7 && < 5
                      , blaze-markup
                      , esqueleto
                      , markdown
@@ -35,6 +37,7 @@ library
                      , shakespeare
                      , text
                      , time
+                     , transformers
   default-language:    Haskell2010
   default-extensions:  RankNTypes, FlexibleContexts, TemplateHaskell, QuasiQuotes, TypeFamilies, OverloadedStrings, FlexibleInstances, MultiParamTypeClasses, ScopedTypeVariables, FunctionalDependencies, ViewPatterns, ImpredicativeTypes
   ghc-options:         -Werror -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-name-shadowing
