--- a/pkcloud-blog.cabal
+++ b/pkcloud-blog.cabal
@@ -26,6 +26,7 @@ library
                        PKCloud.Blog.Handler.Post
                        PKCloud.Blog.Handler.Posts
                        PKCloud.Blog.Handler.Root
+                       PKCloud.Blog.Handler.Tag
   build-depends:       
                        aeson
                      , base >= 4.7 && < 5
