--- a/pkcloud-blog.cabal
+++ b/pkcloud-blog.cabal
@@ -34,6 +34,7 @@ library
                      , blaze-markup
                      , esqueleto
                      , markdown
+                     , bytestring 
                      , persistent
                      , pkcloud-core
                      , shakespeare
