--- a/pkcloud-blog.cabal
+++ b/pkcloud-blog.cabal
@@ -41,6 +41,7 @@ library
                      , text
                      , time
                      , transformers
+                     , yesod-persistent
   default-language:    Haskell2010
   default-extensions:  RankNTypes, FlexibleContexts, TemplateHaskell, QuasiQuotes, TypeFamilies, OverloadedStrings, FlexibleInstances, MultiParamTypeClasses, ScopedTypeVariables, FunctionalDependencies, ViewPatterns, ImpredicativeTypes
   ghc-options:         -Werror -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-name-shadowing
